Adiciones al prpyecto DIW individual

--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
@@ -10,10 +10,25 @@
 <body>
     <div id="cabecera">
         <div id="tituloLogo">
-            <h2>ToolBox Web</h2>
+            <h2><a href="index.html">ToolBox Web</a></h2>
         </div>
+        <div id="menuCabecera">
+            <a href="apache.html"><span id="apacheTomcat"> Apache Tomcat </span></a>
+            <a href="wildfly.html"><span id="wildFly"> WildFly </span></a>
+            <a href="glassfish.html"><span id="glassFish"> GlassFish </span></a>
+        </div>
+    </div>
 
-        asdasd
+    <div id="cuerpo">
+        <div id="descripcion">
+            <h2>Manual para Configurar Servidores Web para Ejecutar Java EE</h2> <br>
+
+            Este manual tiene como objetivo explicar <span id="negrita">cómo configurar tres servidores web <br>
+            para ejecutar aplicaciones Java EE</span>, incluyendo Servlets, JSP, WebSockets y EJBs, <br>
+            en sistemas operativos Windows y Linux. <br> <br>
+            Se cubrirán tres servidores distintos que pueden ser utilizados en entornos de desarrollo web: <br>
+            Apache Tomcat, WildFly y GlassFish.
+        </div>
     </div>
 </body>
 </html>
