Arreglado errores de backgrounds y colors y terminado bloque de descripción del proyecto de DIW

--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
@@ -23,11 +23,11 @@
         <div id="descripcion">
             <h2>Manual para Configurar Servidores Web para Ejecutar Java EE</h2> <br>
 
-            Este manual tiene como objetivo explicar <span id="negrita">cómo configurar tres servidores web <br>
+            Este manual tiene como objetivo explicar <span id="resaltado">cómo configurar tres servidores web <br>
             para ejecutar aplicaciones Java EE</span>, incluyendo Servlets, JSP, WebSockets y EJBs, <br>
             en sistemas operativos Windows y Linux. <br> <br>
             Se cubrirán tres servidores distintos que pueden ser utilizados en entornos de desarrollo web: <br>
-            Apache Tomcat, WildFly y GlassFish.
+            <a href="apache.html">Apache Tomcat</a>, <a href="wildfly.html">WildFly</a> y <a href="glassfish.html">GlassFish</a>.
         </div>
     </div>
 </body>
