--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
@@ -29,6 +29,10 @@
             Se cubrirán tres servidores distintos que pueden ser utilizados en entornos de desarrollo web: <br>
             <a href="apache.html">Apache Tomcat</a>, <a href="wildfly.html">WildFly</a> y <a href="glassfish.html">GlassFish</a>.
         </div>
+
+        <div id="imgServidor">
+
+        </div>
     </div>
 </body>
 </html>
