Organización de carpetas y adiciones de ejercicios de LESS

--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
@@ -30,8 +30,12 @@
             <a href="apache.html">Apache Tomcat</a>, <a href="wildfly.html">WildFly</a> y <a href="glassfish.html">GlassFish</a>.
         </div>
 
-        <div id="imgServidor">
+        <div id="divServidor">
+            <img id="imgServidor" src="img/servidores.png" alt="servidores.png">
+        </div>
 
+        <div id="apache">
+            
         </div>
     </div>
 </body>
