--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/apache.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/apache.html
@@ -30,7 +30,7 @@
                 <p>
                     Apache Tomcat es un <i><b><u>servidor web de código abierto</u></b></i> que implementa las especificaciones de <i><b><u>Java EE</u></b></i>,
                     pero de forma más sencilla que otros servidores más complejos. Es ampliamente utilizado para
-                    <i><b><u>aplicaciones web basadas en Servlets y JSP</u></b></i> -><a href="https://tomcat.apache.org/">[...]</a>.
+                    <i><b><u>aplicaciones web basadas en Servlets y JSP</u></b></i> -><a href="https://tomcat.apache.org/" target="_blank">[...]</a>.
                 </p>
             </article>
 
