Añadido wildfly.html además de hacer la página más dinámica en el manual de apache y wildfly con botones sombreados, transiciones fluidas y cambios menores en tamaños y bordes de enlaces. Algunas correcciones de css...

--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/apache.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/apache.html
@@ -42,7 +42,7 @@
                         <p>
                             Visita la página oficial de Apache Tomcat en
                             <a href="https://tomcat.apache.org/download-90.cgi" target="_blank">Tomcat Downloads</a>.
-                            Descarga el archivo <code>.tar.gz</code> de la última versión estable.
+                            <i><b><u>Descarga el archivo</u></b></i> <code>.tar.gz</code> de la última versión estable.
                         </p>
                     </li>
                     <li>
@@ -85,7 +85,7 @@ Connector port="8080" protocol="HTTP/1.1" ... /
                     <li>
                         <h3>5. Desplegar una aplicación</h3>
                         <p>
-                            Coloca tu archivo <code>.war</code> en el directorio <code>webapps</code>.
+                            <i><b><u>Coloca tu archivo</u></b></i> <code>.war</code> <i><b><u>en el directorio</u></b></i> <code>webapps</code>.
                             Tomcat lo desplegará automáticamente.
                         </p>
                     </li>
@@ -95,29 +95,31 @@ Connector port="8080" protocol="HTTP/1.1" ... /
     </div>
 
     <footer id="pie">
+        <br>
+        <br>
+        
         <table id="contacto">
             <tr>
                 <td>© 2024 ToolBox Web</td>
-                <td><img id="imgInsta" src="img/instagram.png" alt="instagram"> <a
-                        href="https://www.instagram.com/">Instagram: @toolboxweb</a></td>
+                <td><img id="imgInsta" src="img/instagram.png" alt="instagram"> <a href="https://www.instagram.com/" target="_blank">Instagram: @toolboxweb</a></td>
                 <td><a href="index.html">Inicio</a></td>
             </tr>
+
             <tr>
-                <td><img id="imgMaps" src="img/maps.png" alt="maps"> Calle Fátima, Nº 33</td>
-                <td><img id="imgFace" src="img/facebook.png" alt="facebook"> <a
-                        href="https://www.facebook.com">Facebook: @toolboxweb</a></td>
+                <td><img id="imgMaps" src="img/maps.png" alt="maps"> <a href="https://www.google.es/maps/place/C.+F%C3%A1tima,+33,+41089+Dos+Hermanas,+Sevilla/@37.3334844,-5.9376783,17z/data=!4m5!3m4!1s0xd126fce9b222de1:0x4c860bb3704cd44!8m2!3d37.3334802!4d-5.9351034?entry=ttu&g_ep=EgoyMDI0MTEyNC4xIKXMDSoASAFQAw%3D%3D" target="_blank">Calle Fátima, Nº 33</a></td>
+                <td><img id="imgFace" src="img/facebook.png" alt="facebook"> <a href="https://www.facebook.com" target="_blank">Facebook: @toolboxweb</a></td>
                 <td><a href="nosotros.html">Sobre Nosotros</a></td>
             </tr>
+
             <tr>
                 <td><img id="imgTel" src="img/tel.png" alt="tel"> Tel: +34 612 34 56 78</td>
-                <td><img id="imgTwitter" src="img/twitter.png" alt="twitter"> <a href="https://twitter.com">Twitter:
-                        @toolboxweb</a></td>
+                <td><img id="imgTwitter" src="img/twitter.png" alt="twitter"> <a href="https://twitter.com" target="_blank">Twitter: @toolboxweb</a></td>
                 <td><a href="contacto.html">Contáctanos</a></td>
             </tr>
+
             <tr>
                 <td><img id="imgMail" src="img/mail.png" alt="mail"> Correo: toolbox@web.com</td>
-                <td><img id="imgTelegram" src="img/telegram.png" alt="telegram"> <a
-                        href="https://telegram.com">Telegram: toolboxweb</a></td>
+                <td><img id="imgTelegram" src="img/telegram.png" alt="telegram"> <a href="https://telegram.com" target="_blank">Telegram: toolboxweb</a></td>
                 <td><a href="faq.html">FAQ</a></td>
             </tr>
         </table>
