--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
@@ -65,25 +65,25 @@
         <table id="contacto">
             <tr>
                 <td>© 2024 ToolBox Web</td>
-                <td><img id="imgInsta" src="img/instagram.png" alt="instagram"> <a href="https://www.instagram.com/">Instagram: @toolboxweb</a></td>
+                <td><img id="imgInsta" src="img/instagram.png" alt="instagram"> <a href="https://www.instagram.com/" target="_blank">Instagram: @toolboxweb</a></td>
                 <td><a href="index.html">Inicio</a></td>
             </tr>
 
             <tr>
-                <td><img id="imgMaps" src="img/maps.png" alt="maps"> Calle Fátima, Nº 33</td>
-                <td><img id="imgFace" src="img/facebook.png" alt="facebook"> <a href="https://www.facebook.com">Facebook: @toolboxweb</a></td>
+                <td><img id="imgMaps" src="img/maps.png" alt="maps"> <a href="https://www.google.es/maps/place/C.+F%C3%A1tima,+33,+41089+Dos+Hermanas,+Sevilla/@37.3334844,-5.9376783,17z/data=!4m5!3m4!1s0xd126fce9b222de1:0x4c860bb3704cd44!8m2!3d37.3334802!4d-5.9351034?entry=ttu&g_ep=EgoyMDI0MTEyNC4xIKXMDSoASAFQAw%3D%3D" target="_blank">Calle Fátima, Nº 33</a></td>
+                <td><img id="imgFace" src="img/facebook.png" alt="facebook"> <a href="https://www.facebook.com" target="_blank">Facebook: @toolboxweb</a></td>
                 <td><a href="nosotros.html">Sobre Nosotros</a></td>
             </tr>
 
             <tr>
                 <td><img id="imgTel" src="img/tel.png" alt="tel"> Tel: +34 612 34 56 78</td>
-                <td><img id="imgTwitter" src="img/twitter.png" alt="twitter"> <a href="https://twitter.com">Twitter: @toolboxweb</a></td>
+                <td><img id="imgTwitter" src="img/twitter.png" alt="twitter"> <a href="https://twitter.com" target="_blank">Twitter: @toolboxweb</a></td>
                 <td><a href="contacto.html">Contáctanos</a></td>
             </tr>
 
             <tr>
                 <td><img id="imgMail" src="img/mail.png" alt="mail"> Correo: toolbox@web.com</td>
-                <td><img id="imgTelegram" src="img/telegram.png" alt="telegram"> <a href="https://telegram.com">Telegram: toolboxweb</a></td>
+                <td><img id="imgTelegram" src="img/telegram.png" alt="telegram"> <a href="https://telegram.com" target="_blank">Telegram: toolboxweb</a></td>
                 <td><a href="faq.html">FAQ</a></td>
             </tr>
         </table>
