--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index copy.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index copy.html
@@ -22,7 +22,40 @@
     </div>
 
     <div id="cuerpo">
-        
+        <div id="descripcion">
+            <h2>Manual para Configurar Servidores Web para Ejecutar Java EE</h2> <br>
+
+            Este manual tiene como objetivo explicar <span id="resaltado">cómo configurar tres servidores web <br>
+                para ejecutar aplicaciones Java EE</span>, incluyendo Servlets, JSP, WebSockets y EJBs, <br>
+            en sistemas operativos Windows y Linux. <br> <br>
+            Se cubrirán tres servidores distintos que pueden ser utilizados en entornos de desarrollo web: <br>
+            <a href="apache.html">Apache Tomcat</a>, <a href="wildfly.html">WildFly</a> y <a
+                href="glassfish.html">GlassFish</a>.
+        </div>
+
+        <div id="divServidor">
+            <img id="imgServidor" src="img/servidores.png" alt="servidores.png">
+        </div>
+
+        <div id="servidores">
+            <div id="apache">
+                <img id="imgApache" src="img/apache.png" alt="apache">
+                <img id="imgFlecha" src="img/flecha.png" alt="flecha">
+                <a href="apache.html"><img id="imgUbuntu" src="img/ubuntu.png" alt="ubuntu"></a>
+            </div>
+
+            <div id="wildfly">
+                <img id="imgWildFly" src="img/wildfly.png" alt="wildFly">
+                <img id="imgFlecha" src="img/flecha.png" alt="flecha">
+                <a href="wildfly.html"><img id="imgWindows" src="img/windows.png" alt="ubuntu"></a>
+            </div>
+
+            <div id="glassfish">
+                <img id="imgGlassFish" src="img/glassfish.png" alt="glassFish">
+                <img id="imgFlecha" src="img/flecha.png" alt="flecha">
+                <a href="glassfish.html"><img id="imgUbuntu" src="img/ubuntu.png" alt="ubuntu"></a>
+            </div>
+        </div>
     </div>
 
     <footer id="pie">
