Modificaciones en el proyecto DIW

--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
@@ -22,7 +22,32 @@
     </div>
 
     <div id="cuerpo">
-        
+        <section id="contenido">
+            <h1>Manual para Configurar Servidores Web para Ejecutar Java EE</h1>
+
+            <article id="introduccion">
+                <h2>¿Cuál es el objetivo de este manual?</h2>
+                <p>
+                    Este manual tiene como objetivo <i><u><b>explicar cómo configurar tres servidores web 
+                    para ejecutar aplicaciones Java EE</b></u></i>, incluyendo <i><u><b>Servlets, JSP, WebSockets y EJBs</b></u></i>, 
+                    en sistemas operativos <i><u><b>Windows y Linux</b></u></i>. Se cubrirán <i><u><b>tres servidores distintos</b></u></i> 
+                    que pueden ser utilizados en entornos de desarrollo web: <i><u><b>Apache Tomcat, WildFly y GlassFish</b></u></i>. 
+                </p>
+            </article>
+
+            <article id="imagenServidores">
+                <img id="imgServidores" src="img/servidores.png" alt="imagen_Servidores">
+            </article>
+
+            <article id="a">
+                <h2>Esto es una prueba Esto es una prueba </h2>
+                <p>
+                    Esto es una prueba Esto es una prueba Esto es una prueba Esto es una prueba 
+                    Esto es una prueba Esto es una prueba Esto es una prueba Esto es una prueba 
+                    Esto es una prueba Esto es una prueba Esto es una prueba Esto es una prueba 
+                </p>
+            </article>
+        </section>
     </div>
 
     <footer id="pie">
