--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
@@ -39,12 +39,22 @@
                 <img id="imgServidores" src="img/servidores.png" alt="imagen_Servidores">
             </article>
 
-            <article id="a">
-                <h2>Esto es una prueba Esto es una prueba </h2>
+            <article id="seleccionServidor">
+                <h2>Selección de servidores web</h2>
                 <p>
-                    Esto es una prueba Esto es una prueba Esto es una prueba Esto es una prueba 
-                    Esto es una prueba Esto es una prueba Esto es una prueba Esto es una prueba 
-                    Esto es una prueba Esto es una prueba Esto es una prueba Esto es una prueba 
+                    A continuación, se le presentan los <i><u><b>manuales disponibles</b></u></i> de los servidores web:
+
+                    <div id="contenedorServidores">
+                        <div id="apache">
+                            <img id="imgApache" src="img/apache.png" alt="imgApache">
+                        </div>
+                        <div id="wildfly">
+                            <img id="imgWildFly" src="img/wildfly.png" alt="imgWildFly">
+                        </div>
+                        <div id="glassfish">
+                            <img id="imgGlassFish" src="img/glassfish.png" alt="imgGlassFish">
+                        </div>
+                    </div>
                 </p>
             </article>
         </section>
