--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index copy.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index copy.html
@@ -45,11 +45,15 @@
                     A continuación, se le presentan los <i><u><b>manuales disponibles</b></u></i> de los servidores web:
 
                     <div id="contenedorServidores">
-                        <a href="apache.html"><img id="imgApache" src="img/apache.png" alt="imgApache"></a>
-
-                        <a href="wildfly.html"><img id="imgWildFly" src="img/wildfly.png" alt="imgWildFly"></a>
-
-                        <a href="glassfish.html"><img id="imgGlassFish" src="img/glassfish.png" alt="imgGlassFish"></a>
+                        <div id="apache">
+                            <a href="apache.html"><img id="imgApache" src="img/apache.png" alt="imgApache"></a>
+                        </div>
+                        <div id="wildfly">
+                            <a href="wildfly.html"><img id="imgWildFly" src="img/wildfly.png" alt="imgWildFly"></a>
+                        </div>
+                        <div id="glassfish">
+                            <a href="glassfish.html"><img id="imgGlassFish" src="img/glassfish.png" alt="imgGlassFish"></a>
+                        </div>
                     </div>
                 </p>
             </article>
