Terminado index.html del proyecto DIW

--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/index.html
@@ -40,6 +40,16 @@
             </article>
 
             <article id="seleccionServidor">
+                <h2>¿Qué es un servidor web?</h2>
+                <p>Un servidor web es un <u><i><b>software que utiliza los protocolos HTTP o HTTPS 
+                para servir contenido a los navegadores</b></i></u>, permitiendo que los usuarios accedan a <u><i><b>sitios y aplicaciones web</b></i></u>. 
+                Este contenido <u><i><b>puede incluir páginas HTML, imágenes, videos, y otros recursos</b></i></u>.
+                </p>
+
+                <h2>¿Cómo funciona un servidor web?</h2>
+                <p>Un servidor web <u><i><b>escucha solicitudes de los clientes (navegadores) a través del protocolo HTTP</b></i></u>. 
+                Responde con <u><i><b>recursos solicitados</b></i></u>, como <u><i><b>documentos HTML</b></i></u>, o <u><i><b>aplicaciones para generar contenido dinámico.</b></i></u></p>
+                        
                 <h2>Selección de servidores web</h2>
                 <p>
                     A continuación, se le presentan los <i><u><b>manuales disponibles</b></u></i> de los servidores web:
