--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/about.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
 
-    <link rel="stylesheet" href="style/styleINDEX.css">
+    <link rel="stylesheet" href="style/styleABOUT.css">
 </head>
 
 <body>
@@ -23,40 +23,22 @@
 
     <div id="cuerpo">
         <section id="contenido">
-            <h1>Manual para Configurar Servidores Web para Ejecutar Java EE</h1>
-
-            <article id="introduccion">
-                <h2>¿Cuál es el objetivo de este manual?</h2>
+            <h1>Sobre Nosotros</h1>
+            <article id="about">
                 <p>
-                    Este manual tiene como objetivo <i><u><b>explicar cómo configurar tres servidores web 
-                    para ejecutar aplicaciones Java EE</b></u></i>, incluyendo <i><u><b>Servlets, JSP, WebSockets y EJBs</b></u></i>, 
-                    en sistemas operativos <i><u><b>Windows y Linux</b></u></i>. Se cubrirán <i><u><b>tres servidores distintos</b></u></i> 
-                    que pueden ser utilizados en entornos de desarrollo web: <i><u><b>Apache Tomcat, WildFly y GlassFish</b></u></i>. 
+                    Bienvenido a <u><i><b>ToolBox Web</b></i></u>, tu fuente confiable para <u><i><b>manuales</b></i></u> y <u><i><b>guías detalladas</b></i></u> sobre servidores web y configuraciones. 
+                    En ToolBox Web, nos apasiona <u><i><b>simplificar lo complejo</b></i></u> y ofrecerte las herramientas necesarias para 
+                    <u><i><b>gestionar, optimizar y aprovechar al máximo tus proyectos web</b></i></u>. Ya seas un desarrollador experimentado, 
+                    un administrador de sistemas o un aficionado a la tecnología, nuestro objetivo es proporcionarte <u><i><b>recursos claros y prácticos</b></i></u>
+                    que te ayuden a resolver desafíos y mejorar tu experiencia en la administración de servidores.
+                </p>
+                <p>
+                    <u><i><b>Nos comprometemos a mantener nuestros manuales actualizados</b></i></u>, con <u><i><b>explicaciones precisas y pasos fáciles de seguir.</b></i></u> 
+                    Creemos en el poder del <u><i><b>conocimiento compartido</b></i></u> y en la importancia de <u><i><b>construir una comunidad de aprendizaje y soporte. </b></i></u>
+                    Únete a nosotros y descubre: <br><br> <a href="index.html">Cómo hacer que tu entorno web funcione de manera eficiente y profesional</a>.
                 </p>
             </article>
-
-            <article id="imagenServidores">
-                <img id="imgServidores" src="img/servidores.png" alt="imagen_Servidores">
-            </article>
-
-            <article id="seleccionServidor">
-                <h2>Selección de servidores web</h2>
-                <p>
-                    A continuación, se le presentan los <i><u><b>manuales disponibles</b></u></i> de los servidores web:
-
-                    <div id="contenedorServidores">
-                        <div id="apache">
-                            <a href="apache.html"><img id="imgApache" src="img/apache.png" alt="imgApache"></a>
-                        </div>
-                        <div id="wildfly">
-                            <a href="wildfly.html"><img id="imgWildFly" src="img/wildfly.png" alt="imgWildFly"></a>
-                        </div>
-                        <div id="glassfish">
-                            <a href="glassfish.html"><img id="imgGlassFish" src="img/glassfish.png" alt="imgGlassFish"></a>
-                        </div>
-                    </div>
-                </p>
-            </article>
+            
         </section>
     </div>
 
@@ -74,7 +56,7 @@
             <tr>
                 <td><img id="imgMaps" src="img/maps.png" alt="maps"> <a href="https://www.google.es/maps/place/C.+F%C3%A1tima,+33,+41089+Dos+Hermanas,+Sevilla/@37.3334844,-5.9376783,17z/data=!4m5!3m4!1s0xd126fce9b222de1:0x4c860bb3704cd44!8m2!3d37.3334802!4d-5.9351034?entry=ttu&g_ep=EgoyMDI0MTEyNC4xIKXMDSoASAFQAw%3D%3D" target="_blank">Calle Fátima, Nº 33</a></td>
                 <td><img id="imgFace" src="img/facebook.png" alt="facebook"> <a href="https://www.facebook.com" target="_blank">Facebook: @toolboxweb</a></td>
-                <td><a href="nosotros.html">Sobre Nosotros</a></td>
+                <td><a href="about.html">Sobre Nosotros</a></td>
             </tr>
 
             <tr>
