--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/glassfish.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/glassfish.html
@@ -125,7 +125,7 @@ source ~/.bashrc
             <tr>
                 <td><img id="imgMaps" src="img/maps.png" alt="maps"> <a href="https://www.google.es/maps/place/C.+F%C3%A1tima,+33,+41089+Dos+Hermanas,+Sevilla/@37.3334844,-5.9376783,17z/data=!4m5!3m4!1s0xd126fce9b222de1:0x4c860bb3704cd44!8m2!3d37.3334802!4d-5.9351034?entry=ttu&g_ep=EgoyMDI0MTEyNC4xIKXMDSoASAFQAw%3D%3D" target="_blank">Calle Fátima, Nº 33</a></td>
                 <td><img id="imgFace" src="img/facebook.png" alt="facebook"> <a href="https://www.facebook.com" target="_blank">Facebook: @toolboxweb</a></td>
-                <td><a href="nosotros.html">Sobre Nosotros</a></td>
+                <td><a href="about.html">Sobre Nosotros</a></td>
             </tr>
 
             <tr>
