Añadido contact.html y volver.html, es decir, el apartado de contáctanos

--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/volver.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/volver.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Apache Tomcat</title>
 
-    <link rel="stylesheet" href="style/styleABOUT.css">
+    <link rel="stylesheet" href="style/styleVOLVER.css">
 </head>
 
 <body>
@@ -23,22 +23,13 @@
 
     <div id="cuerpo">
         <section id="contenido">
-            <h1>Sobre Nosotros</h1>
-            <article id="about">
-                <p>
-                    Bienvenido a <u><i><b>ToolBox Web</b></i></u>, tu fuente confiable para <u><i><b>manuales</b></i></u> y <u><i><b>guías detalladas</b></i></u> sobre servidores web y configuraciones. 
-                    En ToolBox Web, nos apasiona <u><i><b>simplificar lo complejo</b></i></u> y ofrecerte las herramientas necesarias para 
-                    <u><i><b>gestionar, optimizar y aprovechar al máximo tus proyectos web</b></i></u>. Ya seas un desarrollador experimentado, 
-                    un administrador de sistemas o un aficionado a la tecnología, nuestro objetivo es proporcionarte <u><i><b>recursos claros y prácticos</b></i></u>
-                    que te ayuden a resolver desafíos y mejorar tu experiencia en la administración de servidores.
-                </p>
-                <p>
-                    <u><i><b>Nos comprometemos a mantener nuestros manuales actualizados</b></i></u>, con <u><i><b>explicaciones precisas y pasos fáciles de seguir.</b></i></u> 
-                    Creemos en el poder del <u><i><b>conocimiento compartido</b></i></u> y en la importancia de <u><i><b>construir una comunidad de aprendizaje y soporte. </b></i></u>
-                    Únete a nosotros y descubre: <br><br> <a href="index.html">Cómo hacer que tu entorno web funcione de manera eficiente y profesional</a>.
-                </p>
-            </article>
-            
+            <h1>¡Muchas Gracias! <br>
+                Contactaremos con usted pronto
+            </h1>
+
+            <a href="contact.html">
+                Volver atrás
+            </a>
         </section>
     </div>
 
@@ -72,7 +63,6 @@
             </tr>
         </table>
     </footer>
-    
 </body>
 
 </html>
