--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/apache.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/apache.html
@@ -114,7 +114,7 @@ Connector port="8080" protocol="HTTP/1.1" ... /
             <tr>
                 <td><img id="imgTel" src="img/tel.png" alt="tel"> Tel: +34 612 34 56 78</td>
                 <td><img id="imgTwitter" src="img/twitter.png" alt="twitter"> <a href="https://twitter.com" target="_blank">Twitter: @toolboxweb</a></td>
-                <td><a href="contacto.html">Contáctanos</a></td>
+                <td><a href="contact.html">Contáctanos</a></td>
             </tr>
 
             <tr>
