--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/wildfly.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/wildfly.html
@@ -118,7 +118,7 @@ standalone.bat
             <tr>
                 <td><img id="imgTel" src="img/tel.png" alt="tel"> Tel: +34 612 34 56 78</td>
                 <td><img id="imgTwitter" src="img/twitter.png" alt="twitter"> <a href="https://twitter.com" target="_blank">Twitter: @toolboxweb</a></td>
-                <td><a href="contacto.html">Contáctanos</a></td>
+                <td><a href="contact.html">Contáctanos</a></td>
             </tr>
 
             <tr>
