Añadido opción de enviar correo al de la página web

--- a/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/contact.html
+++ b/CURSO/DIW/CSS/Proyectos/Proyecto_Individual/contact.html
@@ -84,7 +84,7 @@
             </tr>
 
             <tr>
-                <td><img id="imgMail" src="img/mail.png" alt="mail"> Correo: toolbox@web.com</td>
+                <td><img id="imgMail" src="img/mail.png" alt="mail"> <a href="mailto:toolbox@web.com">Correo: toolbox@web.com</a></td>
                 <td><img id="imgTelegram" src="img/telegram.png" alt="telegram"> <a href="https://telegram.com"
                         target="_blank">Telegram: toolboxweb</a></td>
                 <td><a href="faq.html">FAQ</a></td>
