--- a/CURSO/DWEC/C3JS/Ejercicios/Ejercicio2/Ejercicio2.html
+++ b/CURSO/DWEC/C3JS/Ejercicios/Ejercicio2/Ejercicio2.html
@@ -14,7 +14,7 @@
     <style type="text/css">
         #salGrafico {
             width: 100%;
-            height: 680px;
+            height: 400px;
             border: 1px solid;
         }
     </style>
@@ -22,6 +22,7 @@
     <script type="text/javascript">
         window.onload = () => {
             document.querySelector("#archivoXML").addEventListener("change", Leer_Fichero);
+            document.querySelector("#listaAtributos").addEventListener("change", pintarGrafico);
         }
 
         let xml = null;
@@ -102,13 +103,13 @@
             let select = document.querySelector("#listaAtributos");
 
             //Asginar el size del select con el número de hijos de la fila
-            select.size = numOptions;
+            select.size = numOptions-1;
 
             //Limpiar opciones existentes (si es necesario)
             select.innerHTML = "";
 
             //Por cada iteración, crear un option y añadir el el nombre del elemento hijo
-            for (let i = 0; i < numOptions; i++) {
+            for (let i = 1; i < numOptions; i++) {
                 let child = children[i];
                 let option = document.createElement("option");
                 option.value = child.tagName;
@@ -126,23 +127,43 @@
         };
 
 
-        const pintarGrafico = (div, datosAltitud) => {
-            //Crear un chart 
+        const pintarGrafico = () => {
+            //console.log("Llega a pintarGrafico");
+
+            let valorSelect = document.querySelector("#listaAtributos").value;
+            //console.log("valorSelect :>", valorSelect);
+
+            //Guardar en una lista las etiquetas con el valor del Select seleccionado
+            let listaValoresSelect = xml.getElementsByTagName(valorSelect);
+            /*for (let i = 0; i < listaValoresSelect.length; i++) {
+                console.log(listaValoresSelect[i].innerHTML);
+            }*/
+
+            //Crear la lista de los datos del gráfico y añadir como descripción el que se seleccionó de la lista de atributos
+            let datosGrafico = [valorSelect];
+
+            //Por cada iteración, añadir a la lista de los datos el valor de cada elemento
+            for (let i = 0; i < listaValoresSelect.length; i++) {
+                datosGrafico.push(listaValoresSelect[i].innerHTML);
+            }
+            for (let i = 0; i < datosGrafico.length; i++) {
+                console.log(datosGrafico[i]);
+            }
+
+            let div = "#salGrafico";
+            document.querySelector(div).innerHTML = "";
+
+            //Crear el gráfico
             let chart = c3.generate({
                 bindto: div,
                 data: {
                     columns: [
-                        datosAltitud
+                        datosGrafico
                     ],
-                    types: {
-                        Altitud: "area"
-                    }
                 }
             });
 
             alert("Gráfico pintado con éxito");
-
-            crearJSON(XML);
         }
     </script>
 </head>
