--- a/CURSO/DWEC/C3JS/Ejercicios/Ejercicio2/Ejercicio2.html
+++ b/CURSO/DWEC/C3JS/Ejercicios/Ejercicio2/Ejercicio2.html
@@ -158,6 +158,8 @@
                 ejeX.push(trimestres[i].innerHTML);
             }
 
+            ejeX.reverse();
+
             let div = "#salGrafico";
             document.querySelector(div).innerHTML = "";
 
