Modificaciones en Ejercicio 2 de C3JS

--- a/CURSO/DWEC/C3JS/Ejercicios/Ejercicio2/Ejercicio2_V1.html
+++ b/CURSO/DWEC/C3JS/Ejercicios/Ejercicio2/Ejercicio2_V1.html
@@ -201,7 +201,7 @@
 
                     let objetoJSON = {
                         trimestre: trimestre.innerHTML,
-                        dato: dato
+                        dato: parseFloat(dato)
                     }
 
                     //Añadir el objeto a la lista
