Terminado Apuntes de C3JS

--- a/CURSO/DWEC/C3JS/Ejercicios/Ejercicio3/Ejercicio3_V1.html
+++ b/CURSO/DWEC/C3JS/Ejercicios/Ejercicio3/Ejercicio3_V1.html
@@ -78,7 +78,7 @@
             let valorSelect = document.querySelector("#selDatos").value;
             //console.log(valorSelect);
 
-            //Guardar en un array, la lista de la agrupació respectiva al valor seleccionado en el select
+            //Guardar en un array, la lista de la agrupación respectiva al valor seleccionado en el select
             let listaDatosValSelect = listaSexos[valorSelect];
             //console.log(listaDatosValSelect);
 
