--- a/CURSO/DWEC/TTS/Ejemplos/Speech-to-Text.html
+++ b/CURSO/DWEC/TTS/Ejemplos/Speech-to-Text.html
@@ -8,17 +8,31 @@
 <body>
     <button id="startBtn">Start Recording</button>
     <div id="output"></div>
+    <button id="stopBtn">Stop Recording</button>
 
     <script type="text/javascript">
+        const recognition = new webkitSpeechRecognition();
+
+        window.onload = () => {
+            document.querySelector("#stopBtn").addEventListener("click", paraGrabacion);
+        }
+
+        const paraGrabacion = () => {
+            recognition.stop();
+
+            let texto = document.querySelector("#output");
+            console.log(texto.innerHTML);
+            
+        }
+
         document.addEventListener("DOMContentLoaded", function() {
             const startButton = document.getElementById("startBtn");
             const outputDiv = document.getElementById("output");
 
             if ("webkitSpeechRecognition" in window) {
-                const recognition = new webkitSpeechRecognition();
                 recognition.continuous = true;
                 recognition.interimResults = true;
-                recognition.lang = "en-US"; // Set the language to English
+                recognition.lang = "es-ES"; // Set the language to Spanish
 
                 recognition.onstart = () => {
                     startButton.textContent = "Recording...";
